fix some spacing

--- a/src/_sass/home.scss
+++ b/src/_sass/home.scss
@@ -800,8 +800,7 @@ $Home-feature-navList-width: 35%;
 }
 
 .wrapper{
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px;
 }
 .color1 {
   background-color: #80e8ff28; //#889bc2;
